Update `config`